2006-12-18 Tim
 PATCH [ 1618320 ] Update Slovak translation status and add new translator
  Web\developer\l10n: status.xml

2006-12-17 Tim
 PATCH: [ 1617518 ] Web: Remove "main" <div>
  Web: page.inc
  Web\css: all.css
 PATCH: [ 1617527 ] Web: Add min-width to body
  Web\css: all.css
 PATCH: [ 1617578 ] Web: Move tabs code to own function
  Web: page.inc
 PATCH: [ 1617585 ] Web: Rename all.css to screen.css
  Web: page.inc
  Web\css: rename all.css to screen.css

2006-12-15 Tim
 PATCH: [ 1616076 ] Web: Changes for new stable release 2.6.2
  Web: downloads.php index.php page.inc WinMergePAD.xml
  Web\2.6: changes.txt index.php

2006-12-14 Tim
 PATCH: [ 1615375 ] Web: Minimize banner problems
  Web: page.inc
  Web\css: all.css print.css
 Ok, Perry is finally gone! :-(
  Web\developer: developers.xml

2006-11-17 Tim
 PATCH: [ 1597996 ] Web: Add screenshot thumbnails to index pages
  Web: index.php
  Web\2.6: index.php screenshots.php
  Web\2.6\images: new file foldercmp_small.png screenshot_small.png
  Web\css: all.css print.css

2006-11-14 Tim
 Correct "Shell Extension in 64-bit Windows" in Known Limitations.
  Web\2.6: limitations.php
  Web\2.4: limitations.php

2006-11-01 Tim
 PATCH: [ 1586854 ] Web: Change font to Verdana
  Web\css: all.css print.css

2006-10-30 Tim
 BUG: [ 1586836 ] Web: Translation status say 2.4 is still "latest stable"
  Web\developer\l10n: status.php
 PATCH: [ 1587213 ] Web: WinMerge 2.6 favicon.ico
  Web: favicon.ico

2006-10-23 Tim
 BUG: [ 1583164 ] Mismatch in Pad-file URL and URL in PAD-file
  Web: WinMergePAD.php

2006-10-18 Tim
 BUG: [ 1580031 ] Web: Wrong link to screenshot in pad file
  Web: WinMergePAD.xml

2006-10-13 Tim
 PATCH: [ 1576903 ] Web: Changes for new stable release 2.6.0
  Web: downloads.php index.php page.inc WinMergePAD.xml
  Web\2.2: downloads.php
  Web\2.4: index.php new file downloads.php
  Web\2.6: new file *.php *.txt
  Web\2.6\images: new file *.gif *.png